--- a/TeamWork_final/block_list.html
+++ b/TeamWork_final/block_list.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="fontawesome/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Contact</title>
+    <title>Block list</title>
 </head>
 
 <body>
@@ -111,80 +111,161 @@
         <div id="wp-content">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="col-md-3">
-                            <div id="sidebar pt-5">
-                            
-                            <div id="recent_posts border">
-                                <h4 class="text-center text-capitalize border-bottom">recent posts</h4>
-                            </div>
-                        </div>
-                        </div>
-                        
-                        <div id="content">
 
+                    <div class="col-md-4 mt-5">
+                        <div id="sidebar">
+                            <ul class="recent-posts border p-0" style="width: 100%;">
+                                <h3 class="text-center text-uppercase pt-3 pb-3 text-light" style="width: 100%;">Recent Posts</h3>
+                                <li class="text-capitalize d-flex justify-content-center pt-3">
+                                    <a href=""><img src="img/block_list/img-blog6-255x255.png" class="pr-4" alt=""></a>
+                                    <div class="box">
+                                        who needs pain while
+
+                                        <div class="date mt-2 mb-2 text-capitalize">
+                                            12 sep 2021
+                                        </div>
+                                        <button class="btn text-capitalize btn-danger" style="font-size: 11px;">
+                                            chi tiết <i class="fas fa-angle-right"></i>
+                                        </button>
+
+                                    </div>
+
+                                </li>
+                                <li class="text-capitalize d-flex justify-content-center pt-3">
+                                    <a href=""><img src="img/block_list/img-blog6-255x255.png" class="pr-4" alt=""></a>
+                                    <div class="box">
+                                        who needs pain while
+
+                                        <div class="date mt-2 mb-2 text-capitalize">
+                                            12 sep 2021
+                                        </div>
+                                        <button class="btn text-capitalize btn-danger" style="font-size: 11px;">
+                                            chi tiết <i class="fas fa-angle-right"></i>
+                                        </button>
+
+                                    </div>
+
+                                </li>
+                                <li class="text-capitalize d-flex justify-content-center pt-3">
+                                    <a href=""><img src="img/block_list/img-blog7-255x255.png" class="pr-4" alt=""></a>
+                                    <div class="box">
+                                        who needs pain while
+
+                                        <div class="date mt-2 mb-2 text-capitalize">
+                                            12 sep 2021
+                                        </div>
+                                        <button class="btn text-capitalize btn-danger" style="font-size: 11px;">
+                                            chi tiết <i class="fas fa-angle-right"></i>
+                                        </button>
+
+                                    </div>
+
+                                </li>
+                                <li class="text-capitalize d-flex justify-content-center pt-3">
+                                    <a href=""><img src="img/block_list/post1-255x255.jpg" class="pr-4" alt=""></a>
+                                    <div class="box">
+                                        who needs pain while
+
+                                        <div class="date mt-2 mb-2 text-capitalize">
+                                            12 sep 2021
+                                        </div>
+                                        <button class="btn text-capitalize btn-danger" style="font-size: 11px;">
+                                            chi tiết <i class="fas fa-angle-right"></i>
+                                        </button>
+
+                                    </div>
+
+                                </li>
+                                <li class="text-capitalize d-flex justify-content-center pt-3">
+                                    <a href=""><img src="img/block_list/post3-255x255.jpg" class="pr-4" alt=""></a>
+                                    <div class="box">
+                                        who needs pain while
+
+                                        <div class="date mt-2 mb-2 text-capitalize">
+                                            12 sep 2021
+                                        </div>
+                                        <button class="btn text-capitalize btn-danger" style="font-size: 11px;">
+                                            chi tiết <i class="fas fa-angle-right"></i>
+                                        </button>
+
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
+                    </div>
+                    <div class="col-md-6 mt-5">
 
                     </div>
-                </div>
-            </div>
 
-            <div class="email p-5 mt-4 bg-light">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 col-lg-6">
-                            <div class="box-1 d-flex">
-                                <div class="icon" style="font-size: 40px;">
-                                    <i class="far fa-envelope"></i>
-                                </div>
 
-                                <p class="pt-2 pl-3">SUBSCRIBE TO OUR NEWSLETTER TO RECEIVE NEWS,<br>
-                                    UPDATES, AND ANOTHER STUFF BY EMAIL.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-12 col-lg-6 d-flex">
-                            <div id="form">
-                                <input type="text" placeholder="Enter your email" class="pt-3 pl-3 pb-3">
-                            </div>
-                            <div class="btn">
-                                <button class="btn bg-success pt-2 pb-2">Send</button>
-                            </div>
+                    <div id="content">
 
-                        </div>
                     </div>
 
                 </div>
             </div>
         </div>
-        <!-- end content -->
 
-        <!-- footer -->
-        <div id="footer" class="bg-dark p-5">
+        <div class="email p-5 mt-4 bg-light">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 d-flex justify-content-between">
-                        <div class="logo d-flex">
-                            <a href=""><img src="img/logo/logo1.png" alt=""></a>
-                            <div class="text-light pt-3 pl-3">
-                                © 2021 | private product
+                    <div class="col-md-12 col-lg-6">
+                        <div class="box-1 d-flex">
+                            <div class="icon" style="font-size: 40px;">
+                                <i class="far fa-envelope"></i>
                             </div>
+
+                            <p class="pt-2 pl-3">SUBSCRIBE TO OUR NEWSLETTER TO RECEIVE NEWS,<br>
+                                UPDATES, AND ANOTHER STUFF BY EMAIL.</p>
                         </div>
-                        <div class="text-light">
-                            My Company , Glasgow D04 89GR <br>
-                            Call us now: 800-2345-6789
+                    </div>
+                    <div class="col-md-12 col-lg-6 d-flex">
+                        <div id="form">
+                            <input type="text" placeholder="Enter your email" class="pt-3 pl-3 pb-3">
                         </div>
-                        <div class="link text-light">
-                            <i class="fab fa-facebook-f p-2"></i>
-                            <i class="fab fa-twitter p-2"></i>
-                            <i class="fab fa-linkedin-in p-2"></i>
-                            <i class="fab fa-google-plus-g p-2"></i>
-                            <i class="fas fa-wifi p-2"></i>
+                        <div class="btn">
+                            <button class="btn bg-success pt-2 pb-2">Send</button>
                         </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- end content -->
+
+    <!-- footer -->
+    <div id="footer" class="bg-dark p-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2 col-md-6 text-center pt-md-5">
+                      <a href=""><img src="img/logo/logo1.png" alt=""></a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                       <div class="text-light pt-3 pl-md-5 pt-sm-5  text-center">
+                            © 2021 | private product
+                        </div>
+                </div>
+                <div class="col-lg-3 col-md-6 pt-md-5 pt-sm-5 text-center">
+                      <div class="text-light">
+                        My Company , Glasgow D04 89GR <br>
+                        Call us now: 800-2345-6789
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6  pt-md-5 pt-sm-5 text-center">
+                      <div class="link text-light">
+                        <i class="fab fa-facebook-f p-2"></i>
+                        <i class="fab fa-twitter p-2"></i>
+                        <i class="fab fa-linkedin-in p-2"></i>
+                        <i class="fab fa-google-plus-g p-2"></i>
+                        <i class="fas fa-wifi p-2"></i>     
                     </div>
                 </div>
             </div>
         </div>
-        <!-- end footer -->
+    </div>
+    <!-- end footer -->
     </div>
 
 
