--- a/TeamWork_final/contact.html
+++ b/TeamWork_final/contact.html
@@ -144,16 +144,14 @@
                             veniam quaerat fugit cum ipsam in ipsa non dolorem ex commodi. Ab quod quo facere
                             illo ad ut nulla?
                             <br>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non adipisci provident sapiente
-                            aperiam tempore quibusdam placeat, accusantium ullam dignissimos, fugit sed rerum, ab
-                            inventore nostrum facere odio ducimus? Delectus, corporis.
+                         
                         </p>
                         <p class="pt-3">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi voluptas id corporis
                             exercitationem eum et odio, iste a similique! Deserunt, sed eveniet reprehenderit adipisci
                             id quaerat nostrum cum ab repudiandae!
                         </p>
-                        <div class="box border" id="box">
+                        <div class="box border" id="box" style="border-radius: 15px;"> 
                             <ul class="p-0 mb-0">
                                 <li class="border-bottom" id="dropdown1">
                                     <ul class="p-0">
@@ -282,7 +280,7 @@
                                     UPDATES, AND ANOTHER STUFF BY EMAIL.</p>
                             </div>
                         </div>
-                        <div class="col-md-12 col-lg-6 d-flex">
+                        <div class="col-md-12 col-lg-6 d-flex" style="with:100%">
                             <div id="form">
                                 <input type="text" placeholder="Enter your email" class="pt-3 pl-3 pb-3">
                             </div>
@@ -298,33 +296,37 @@
         </div>
         <!-- end content -->
 
-        <!-- footer -->
-        <div id="footer" class="bg-dark p-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 d-flex justify-content-between">
-                        <div class="logo d-flex">
-                            <a href=""><img src="img/logo/logo1.png" alt=""></a>
-                            <div class="text-light pt-3 pl-3">
-                                © 2021 | private product
-                            </div>
+       <!-- footer -->
+    <div id="footer" class="bg-dark p-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2 col-md-6 text-center pt-md-5">
+                      <a href=""><img src="img/logo/logo1.png" alt=""></a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                       <div class="text-light pt-3 pl-md-5 pt-sm-5  text-center">
+                            © 2021 | private product
                         </div>
-                        <div class="text-light">
-                            My Company , Glasgow D04 89GR <br>
-                            Call us now: 800-2345-6789
-                        </div>
-                        <div class="link text-light">
-                            <i class="fab fa-facebook-f p-2"></i>
-                            <i class="fab fa-twitter p-2"></i>
-                            <i class="fab fa-linkedin-in p-2"></i>
-                            <i class="fab fa-google-plus-g p-2"></i>
-                            <i class="fas fa-wifi p-2"></i>
-                        </div>
+                </div>
+                <div class="col-lg-3 col-md-6 pt-md-5 pt-sm-5 text-center">
+                      <div class="text-light">
+                        My Company , Glasgow D04 89GR <br>
+                        Call us now: 800-2345-6789
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6  pt-md-5 pt-sm-5 text-center">
+                      <div class="link text-light">
+                        <i class="fab fa-facebook-f p-2"></i>
+                        <i class="fab fa-twitter p-2"></i>
+                        <i class="fab fa-linkedin-in p-2"></i>
+                        <i class="fab fa-google-plus-g p-2"></i>
+                        <i class="fas fa-wifi p-2"></i>     
                     </div>
                 </div>
             </div>
         </div>
-        <!-- end footer -->
+    </div>
+    <!-- end footer -->
     </div>
 
 
