--- a/TeamWork_final/home.html
+++ b/TeamWork_final/home.html
@@ -110,33 +110,37 @@
         </div>
         <!-- end content -->
 
-        <!-- footer -->
-        <div id="footer" class="bg-dark p-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 d-flex justify-content-between">
-                        <div class="logo d-flex">
-                            <a href=""><img src="img/logo/logo1.png" alt=""></a>
-                            <div class="text-light pt-3 pl-3">
-                                © 2021 | private product
-                            </div>
+       <!-- footer -->
+    <div id="footer" class="bg-dark p-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2 col-md-6 text-center pt-md-5">
+                      <a href=""><img src="img/logo/logo1.png" alt=""></a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                       <div class="text-light pt-3 pl-md-5 pt-sm-5  text-center">
+                            © 2021 | private product
                         </div>
-                        <div class="text-light">
-                            My Company , Glasgow D04 89GR <br>
-                            Call us now: 800-2345-6789
-                        </div>
-                        <div class="link text-light">
-                            <i class="fab fa-facebook-f p-2"></i>
-                            <i class="fab fa-twitter p-2"></i>
-                            <i class="fab fa-linkedin-in p-2"></i>
-                            <i class="fab fa-google-plus-g p-2"></i>
-                            <i class="fas fa-wifi p-2"></i>
-                        </div>
+                </div>
+                <div class="col-lg-3 col-md-6 pt-md-5 pt-sm-5 text-center">
+                      <div class="text-light">
+                        My Company , Glasgow D04 89GR <br>
+                        Call us now: 800-2345-6789
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6  pt-md-5 pt-sm-5 text-center">
+                      <div class="link text-light">
+                        <i class="fab fa-facebook-f p-2"></i>
+                        <i class="fab fa-twitter p-2"></i>
+                        <i class="fab fa-linkedin-in p-2"></i>
+                        <i class="fab fa-google-plus-g p-2"></i>
+                        <i class="fas fa-wifi p-2"></i>     
                     </div>
                 </div>
             </div>
         </div>
-        <!-- end footer -->
+    </div>
+    <!-- end footer -->
     </div>
 
 
