--- a/TeamWork_final/block_list.html
+++ b/TeamWork_final/block_list.html
@@ -115,7 +115,8 @@
                     <div class="col-md-4 mt-5">
                         <div id="sidebar">
                             <ul class="recent-posts border p-0" style="width: 100%;">
-                                <h3 class="text-center text-uppercase pt-3 pb-3 text-light" style="width: 100%;">Recent Posts</h3>
+                                <h3 class="text-center text-uppercase pt-3 pb-3 text-light" style="width: 100%;">Recent
+                                    Posts</h3>
                                 <li class="text-capitalize d-flex justify-content-center pt-3">
                                     <a href=""><img src="img/block_list/img-blog6-255x255.png" class="pr-4" alt=""></a>
                                     <div class="box">
@@ -193,8 +194,223 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-6 mt-5">
+                    <div class="col-md-8 mt-5" style="width: 100%;" id="list-thumb">
+                        <h1>
+                            Block list by my team
+                        </h1>
+                        <ul class="p-0" style="width: 100%;">
+                            <li class="d-flex " style="width: 100%;">
+                                <div class="img">
+                                    <img src="img/block_list/img-blog5-255x255.png" alt="">
+                                    <div class="date">
+                                        12 <br> <span style="color: rgb(167, 167, 167);">dec 2021</span>
+                                    </div>
+                                </div>
+                                <div class="box pt-3" style="padding: 0px 0px 0px 30px; ">
+                                    <div class="text">
+                                        Who needs pain whiles
+                                    </div>
+                                    <div class="list-icon d-flex mb-3 mt-3">
+                                        <div class="icon  border-right pr-3 pl-1">
+                                            <a href=""><i class="fas fa-user-alt"></i>7uptheme</a>
+                                        </div>
+                                        <div class="icon border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-folder-open"></i> Image <a href="">quote</a></a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-tags"></i> No tag</a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-comments"></i> 2 Comments</a>
+                                        </div>
 
+                                    </div>
+                                    <div class="read-more d-flex">
+                                        <a href="">Read more<i class="fas fa-chevron-circle-right"></i></a>
+                                    </div>
+                            </li>
+                            <li class="d-flex " style="width: 100%;">
+                                <div class="img">
+                                    <img src="img/block_list/img-blog6-255x255.png" alt="">
+                                    <div class="date">
+                                        12 <br> <span style="color: rgb(167, 167, 167);">dec 2021</span>
+                                    </div>
+                                </div>
+                                <div class="box pt-3" style="padding: 0px 0px 0px 30px; ">
+                                    <div class="text">
+                                        Who needs pain whiles
+                                    </div>
+                                    <div class="list-icon d-flex mb-3 mt-3">
+                                        <div class="icon  border-right pr-3 pl-1">
+                                            <a href=""><i class="fas fa-user-alt"></i>7uptheme</a>
+                                        </div>
+                                        <div class="icon border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-folder-open"></i> Image <a href="">quote</a></a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-tags"></i> No tag</a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-comments"></i> 2 Comments</a>
+                                        </div>
+
+                                    </div>
+                                    <div class="read-more d-flex">
+                                        <a href="">Read more<i class="fas fa-chevron-circle-right"></i></a>
+                                    </div>
+                            </li>
+                            <li class="d-flex " style="width: 100%;">
+                                <div class="img">
+                                    <img src="img/block_list/img-blog7-255x255.png" alt="">
+                                    <div class="date">
+                                        12 <br> <span style="color: rgb(167, 167, 167);">dec 2021</span>
+                                    </div>
+                                </div>
+                                <div class="box pt-3" style="padding: 0px 0px 0px 30px; ">
+                                    <div class="text">
+                                        Who needs pain whiles
+                                    </div>
+                                    <div class="list-icon d-flex mb-3 mt-3">
+                                        <div class="icon  border-right pr-3 pl-1">
+                                            <a href=""><i class="fas fa-user-alt"></i>7uptheme</a>
+                                        </div>
+                                        <div class="icon border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-folder-open"></i> Image <a href="">quote</a></a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-tags"></i> No tag</a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-comments"></i> 2 Comments</a>
+                                        </div>
+
+                                    </div>
+                                    <div class="read-more d-flex">
+                                        <a href="">Read more<i class="fas fa-chevron-circle-right"></i></a>
+                                    </div>
+                            </li>
+                            <li class="d-flex " style="width: 100%;">
+                                <div class="img">
+                                    <img src="img/block_list/post1-255x255.jpg" alt="">
+                                    <div class="date">
+                                        12 <br> <span style="color: rgb(167, 167, 167);">dec 2021</span>
+                                    </div>
+                                </div>
+                                <div class="box pt-3" style="padding: 0px 0px 0px 30px; ">
+                                    <div class="text">
+                                        Who needs pain whiles
+                                    </div>
+                                    <div class="list-icon d-flex mb-3 mt-3">
+                                        <div class="icon  border-right pr-3 pl-1">
+                                            <a href=""><i class="fas fa-user-alt"></i>7uptheme</a>
+                                        </div>
+                                        <div class="icon border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-folder-open"></i> Image <a href="">quote</a></a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-tags"></i> No tag</a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-comments"></i> 2 Comments</a>
+                                        </div>
+
+                                    </div>
+                                    <div class="read-more d-flex">
+                                        <a href="">Read more<i class="fas fa-chevron-circle-right"></i></a>
+                                    </div>
+                            </li>
+                            <li class="d-flex " style="width: 100%;">
+                                <div class="img">
+                                    <img src="img/block_list/post3-255x255.jpg" alt="">
+                                    <div class="date">
+                                        12 <br> <span style="color: rgb(167, 167, 167);">dec 2021</span>
+                                    </div>
+                                </div>
+                                <div class="box pt-3" style="padding: 0px 0px 0px 30px; ">
+                                    <div class="text">
+                                        Who needs pain whiles
+                                    </div>
+                                    <div class="list-icon d-flex mb-3 mt-3">
+                                        <div class="icon  border-right pr-3 pl-1">
+                                            <a href=""><i class="fas fa-user-alt"></i>7uptheme</a>
+                                        </div>
+                                        <div class="icon border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-folder-open"></i> Image <a href="">quote</a></a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-tags"></i> No tag</a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-comments"></i> 2 Comments</a>
+                                        </div>
+
+                                    </div>
+                                    <div class="read-more d-flex">
+                                        <a href="">Read more<i class="fas fa-chevron-circle-right"></i></a>
+                                    </div>
+                            </li>
+                            <li class="d-flex " style="width: 100%;">
+                                <div class="img">
+                                    <img src="img/block_list/post4-255x255.jpg" alt="">
+                                    <div class="date">
+                                        12 <br> <span style="color: rgb(167, 167, 167);">dec 2021</span>
+                                    </div>
+                                </div>
+                                <div class="box pt-3" style="padding: 0px 0px 0px 30px; ">
+                                    <div class="text">
+                                        Who needs pain whiles
+                                    </div>
+                                    <div class="list-icon d-flex mb-3 mt-3">
+                                        <div class="icon  border-right pr-3 pl-1">
+                                            <a href=""><i class="fas fa-user-alt"></i>7uptheme</a>
+                                        </div>
+                                        <div class="icon border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-folder-open"></i> Image <a href="">quote</a></a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-tags"></i> No tag</a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-comments"></i> 2 Comments</a>
+                                        </div>
+
+                                    </div>
+                                    <div class="read-more d-flex">
+                                        <a href="">Read more<i class="fas fa-chevron-circle-right"></i></a>
+                                    </div>
+                            </li>
+                            <li class="d-flex " style="width: 100%;">
+                                <div class="img">
+                                    <img src="img/block_list/post5-255x255.jpg" alt="">
+                                    <div class="date">
+                                        12 <br> <span style="color: rgb(167, 167, 167);">dec 2021</span>
+                                    </div>
+                                </div>
+                                <div class="box pt-3" style="padding: 0px 0px 0px 30px; ">
+                                    <div class="text">
+                                        Who needs pain whiles
+                                    </div>
+                                    <div class="list-icon d-flex mb-3 mt-3">
+                                        <div class="icon  border-right pr-3 pl-1">
+                                            <a href=""><i class="fas fa-user-alt"></i>7uptheme</a>
+                                        </div>
+                                        <div class="icon border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-folder-open"></i> Image <a href="">quote</a></a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-tags"></i> No tag</a>
+                                        </div>
+                                        <div class="icon  border-right pr-3 pl-2">
+                                            <a href=""><i class="fas fa-comments"></i> 2 Comments</a>
+                                        </div>
+
+                                    </div>
+                                    <div class="read-more d-flex">
+                                        <a href="">Read more<i class="fas fa-chevron-circle-right"></i></a>
+                                    </div>
+                            </li>
+                            
+                        </ul>
                     </div>
 
 
@@ -240,26 +456,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-2 col-md-6 text-center pt-md-5">
-                      <a href=""><img src="img/logo/logo1.png" alt=""></a>
+                    <a href=""><img src="img/logo/logo1.png" alt=""></a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                       <div class="text-light pt-3 pl-md-5 pt-sm-5  text-center">
-                            © 2021 | private product
-                        </div>
+                    <div class="text-light pt-3 pl-md-5 pt-sm-5  text-center">
+                        © 2021 | private product
+                    </div>
                 </div>
                 <div class="col-lg-3 col-md-6 pt-md-5 pt-sm-5 text-center">
-                      <div class="text-light">
+                    <div class="text-light">
                         My Company , Glasgow D04 89GR <br>
                         Call us now: 800-2345-6789
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6  pt-md-5 pt-sm-5 text-center">
-                      <div class="link text-light">
+                    <div class="link text-light">
                         <i class="fab fa-facebook-f p-2"></i>
                         <i class="fab fa-twitter p-2"></i>
                         <i class="fab fa-linkedin-in p-2"></i>
                         <i class="fab fa-google-plus-g p-2"></i>
-                        <i class="fas fa-wifi p-2"></i>     
+                        <i class="fas fa-wifi p-2"></i>
                     </div>
                 </div>
             </div>
