--- a/TeamWork_final/contact.html
+++ b/TeamWork_final/contact.html
@@ -20,14 +20,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sevillana&display=swap" rel="stylesheet">
     <div id="wrapper">
-        <nav class="navbar bg-dark navbar-dark  navbar-expand-md sticky-top d-flex justify-content-between">
-            <a href="" class="navbar-brand"><img src="img/logo/logo-copy.png" style="height: 35px;"></a>
+        <!-- <nav class="navbar bg-dark navbar-dark  navbar-expand-md sticky-top d-flex justify-content-between">
+            <a class="navbar-brand"><img src="img/logo/logo-copy.png" style="height: 35px;"></a>
             <form action="" class="form-inline">
                 <button class="btn btn-success ml-2">
                     By Now
                 </button>
             </form>
-        </nav>
+        </nav> -->
         <!-- header -->
         <div id="header">
 
@@ -39,12 +39,11 @@
                     <div class="row">
                         <div class="col-md-12">
                             <nav class="navbar navbar-dark navbar-expand-lg mt-4 justify-content-between">
-                                <a href="" class="navbar-brand"><img src="img/logo/logo1.png"></a>
-                                <form action="" class="form-inline">
-                                    <input type="text" class="form-control mr-3 ">
-                                    <button class="btn btn-success ml-2">
-                                        Search
-                                    </button>
+                                <a href="home.html" class="navbar-brand"><img src="img/logo/logo1.png"></a>
+                                <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
+                                    <i class="fas fa-search icon-search"  style="font-size: 24px;" aria-hidden="true"></i>
+                                    <input class="form-control form-control-sm ml-3 w-75 " type="text"
+                                        placeholder="Search..." aria-label="Search" >
                                 </form>
                             </nav>
 
@@ -56,46 +55,43 @@
                                 <div class="collapse navbar-collapse " id="main-nav">
                                     <ul class="navbar-nav">
                                         <li class="nav-item">
-                                            <a href="" class="nav-link text-light">Home</a>
+                                            <a href="home.html" class="nav-links">Home</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="" class="nav-link text-light mr-3">Corssbody</a>
+                                            <a href="" class="nav-links">Corssbody</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="" class="nav-link text-light mr-3">Satchel Totes</a>
+                                            <a href="" class="nav-links">Satchel Totes</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="" class="nav-link text-light mr-3">Blog List</a>
+                                            <a href="block_list.html" class="nav-links">Blog List</a>
                                         </li>
-                                        <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle text-light  " href="#"
-                                                id="navbarDropdown" role="button" data-toggle="dropdown"
-                                                aria-haspopup="true" aria-expanded="false">
+                                        <li class="nav-item dropdowns">
+                                            <a class="nav-links" href="shop.html">
                                                 Shop
                                             </a>
-                                            <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdown">
-                                                <a class="dropdown-item text-secondary " href="#">Quần áo Nam</a>
-                                                <a class="dropdown-item text-secondary " href="#">Quần áo nữ</a>
-                                                <a class="dropdown-item text-secondary " href="#">Quần áo trẻ em</a>
-
+                                            <div class="dropdown-menus">
+                                                <a class="dropdown-items" href="#">Quần áo Nam</a>
+                                                <a class="dropdown-items" href="#">Quần áo nữ</a>
+                                                <a class="dropdown-items" href="#">Quần áo trẻ em</a>
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="" class="nav-link text-light mr-3">Cart</a>
+                                            <a href="" class="nav-links">Cart</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="" class="nav-link text-light mr-3">Check out</a>
+                                            <a href="" class="nav-links">Check out</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="" class="nav-link text-light mr-3">Contact</a>
+                                            <a href="contact.html" class="nav-links">Contact</a>
                                         </li>
 
                                     </ul>
 
                                 </div>
                                 <div class="icon text-light">
-                                    <i class="fas fa-user p-2"></i>
-                                    <i class="fas fa-cart-arrow-down p-2"></i>
+                                    <i class="fas fa-user p-2 icons"></i>
+                                    <i class="fas fa-cart-arrow-down p-2 icons"></i>
                                 </div>
                             </nav>
                         </div>
@@ -144,19 +140,19 @@
                             veniam quaerat fugit cum ipsam in ipsa non dolorem ex commodi. Ab quod quo facere
                             illo ad ut nulla?
                             <br>
-                         
+
                         </p>
                         <p class="pt-3">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi voluptas id corporis
                             exercitationem eum et odio, iste a similique! Deserunt, sed eveniet reprehenderit adipisci
                             id quaerat nostrum cum ab repudiandae!
                         </p>
-                        <div class="box border" id="box" style="border-radius: 15px;"> 
+                        <div class="box border" id="box" style="border-radius: 15px;">
                             <ul class="p-0 mb-0">
                                 <li class="border-bottom" id="dropdown1">
                                     <ul class="p-0">
                                         <li class="p-3">
-                                            <a href="" class="text-dark">- Lorem ipsum dolor sit amet consectetur.</a>
+                                            <a class="text-dark">- Lorem ipsum dolor sit amet consectetur.</a>
                                         </li>
                                         <li>
                                             <div id="item1"
@@ -178,7 +174,7 @@
                                 <li class="border-bottom" id="dropdown2">
                                     <ul class="p-0">
                                         <li class="p-3">
-                                            <a href="" class="text-dark">- Lorem ipsum dolor sit amet consectetur.</a>
+                                            <a class="text-dark">- Lorem ipsum dolor sit amet consectetur.</a>
                                         </li>
                                         <li>
                                             <div id="item2" class="bg-secondary "
@@ -200,7 +196,7 @@
                                 <li class="border-bottom" id="dropdown3">
                                     <ul class="p-0">
                                         <li class="p-3">
-                                            <a href="" class="text-dark">- Lorem ipsum dolor sit amet consectetur.</a>
+                                            <a class="text-dark">- Lorem ipsum dolor sit amet consectetur.</a>
                                         </li>
                                         <li>
                                             <div id="item3" class="bg-secondary "
@@ -221,7 +217,7 @@
                                 <li class="border-bottom" id="dropdown4">
                                     <ul class="p-0">
                                         <li class="p-3">
-                                            <a href="" class="text-dark">- Lorem ipsum dolor sit amet consectetur.</a>
+                                            <a class="text-dark">- Lorem ipsum dolor sit amet consectetur.</a>
                                         </li>
                                         <li>
                                             <div id="item4" class="bg-secondary "
@@ -243,7 +239,7 @@
                                 <li id="dropdown5">
                                     <ul class="p-0">
                                         <li class="p-3">
-                                            <a href="" class="text-dark">- Lorem ipsum dolor sit amet consectetur.</a>
+                                            <a class="text-dark">- Lorem ipsum dolor sit amet consectetur.</a>
                                         </li>
                                         <li>
                                             <div id="item5" class="bg-secondary "
@@ -275,19 +271,27 @@
                                 <div class="icon" style="font-size: 40px;">
                                     <i class="far fa-envelope"></i>
                                 </div>
-
                                 <p class="pt-2 pl-3">SUBSCRIBE TO OUR NEWSLETTER TO RECEIVE NEWS,<br>
                                     UPDATES, AND ANOTHER STUFF BY EMAIL.</p>
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-6 d-flex" style="with:100%">
-                            <div id="form">
-                                <input type="text" placeholder="Enter your email" class="pt-3 pl-3 pb-3">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-9 col-md-8 col-sm-8 col-8">
+                                        <div id="form">
+                                            <input type="email" placeholder="Enter your email" class="pt-3 pl-3 pb-3">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3 col-md-4 col-sm-4 col-4">
+                                        <div class="btn">
+                                            <button class="btn bg-success pt-2 pb-2">Send</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="btn">
-                                 <button class="btn bg-success pt-2 pb-2">Send</button>
-                            </div>
-                           
+
+
                         </div>
                     </div>
 
@@ -296,37 +300,37 @@
         </div>
         <!-- end content -->
 
-       <!-- footer -->
-    <div id="footer" class="bg-dark p-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-2 col-md-6 text-center pt-md-5">
-                      <a href=""><img src="img/logo/logo1.png" alt=""></a>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                       <div class="text-light pt-3 pl-md-5 pt-sm-5  text-center">
+        <!-- footer -->
+        <div id="footer" class="bg-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-2 col-md-6 text-center pt-md-5">
+                        <a href=""><img src="img/logo/logo1.png" alt=""></a>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="text-light pt-3 pl-md-5 pt-sm-5  text-center">
                             © 2021 | private product
                         </div>
-                </div>
-                <div class="col-lg-3 col-md-6 pt-md-5 pt-sm-5 text-center">
-                      <div class="text-light">
-                        My Company , Glasgow D04 89GR <br>
-                        Call us now: 800-2345-6789
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6  pt-md-5 pt-sm-5 text-center">
-                      <div class="link text-light">
-                        <i class="fab fa-facebook-f p-2"></i>
-                        <i class="fab fa-twitter p-2"></i>
-                        <i class="fab fa-linkedin-in p-2"></i>
-                        <i class="fab fa-google-plus-g p-2"></i>
-                        <i class="fas fa-wifi p-2"></i>     
+                    <div class="col-lg-3 col-md-6 pt-md-5 pt-sm-5 text-center">
+                        <div class="text-light">
+                            My Company , Glasgow D04 89GR <br>
+                            Call us now: 800-2345-6789
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6  pt-md-5 pt-sm-5 text-center">
+                        <div class="link text-light">
+                            <i class="fab fa-facebook-f p-2"></i>
+                            <i class="fab fa-twitter p-2"></i>
+                            <i class="fab fa-linkedin-in p-2"></i>
+                            <i class="fab fa-google-plus-g p-2"></i>
+                            <i class="fas fa-wifi p-2"></i>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- end footer -->
+        <!-- end footer -->
     </div>
 
 
