--- a/java/index.html
+++ b/java/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="fontawesome/css/all.css">
+
 </head>
+
 <body>
-    <i class="far fa-address-book"></i>
-    <img src="img/Screenshot 2021-07-22 200328.png" alt="">
-    <i class="fas fa-sign-in-alt"></i>
-    <i class="fas fa-search"></i>
-    <img src="img/1.png" alt="">
-    <i class="fas fa-edit"></i>
-    <i class="fas fa-eye"></i>
-    <i class="far fa-file"></i>
-    <i class="fas fa-plus"></i>
-    <i class="fas fa-save"></i>
-    <i class="fas fa-sort"></i>
-    <i class="fas fa-check"></i><br>
-    <img src="../TeamWork_final/img/banenr/1.jpg" alt="">
+<div id="main">
+    <div class="header">
+        <div class="nav">
+            <div class="container">
+                <h1 class="heading">Tôi đang đều đặn học lập trình mỗi ngày</h1>
+            </div>
+            <div class="footer"></div>
+        </div>
+    </div>
+</div>
 </body>
+
 </html>
